Fix banner fade out
The banner did fade out but the element was still in place, though
invisible. This could have blocked access to underlying links or
buttons.

--- a/assets/css/banner.scss
+++ b/assets/css/banner.scss
@@ -21,9 +21,12 @@ $text: white;
     opacity: 1;
     transform: translateY(0);
   }
-  100% {
+  99% {
     opacity: 0;
-    transform: translateY(50px);
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(200%);
   }
 }
 
